# Software Name : libits-client
# SPDX-FileCopyrightText: Copyright (c) Orange SA
# SPDX-License-Identifier: MIT
#
# This software is distributed under the MIT license,
# see the "LICENSE.txt" file for more details or https://opensource.org/license/MIT/
#
# Authors: see CONTRIBUTORS.md

[package]
name = "libits-client"
version = "2.0.1"
authors = ["Frédéric Gardes <frederic.gardes@orange.com>", "Nicolas Buffon <nicolas.buffon@orange.com>"]
license = "MIT"
description = "library to connect on an ITS MQTT server"
homepage = "https://github.com/Orange-OpenSource/its-client"
documentation = "https://docs.rs/its-client"
repository = "https://github.com/Orange-OpenSource/its-client.git"
readme = "README.md"
keywords = ["network", "its", "vehicle", "mqtt", "etsi"]
edition = "2024"

[lib]
name = "libits"
path = "src/lib.rs"
test = true
doctest = true
doc = true
edition = "2024"
crate-type = ["lib"]

[features]
mobility = ["geo"]
geo_routing = ["mobility"]
telemetry = ["base64", "opentelemetry", "opentelemetry-http", "opentelemetry-otlp", "opentelemetry_sdk"]

[[example]]
name = "json_counter"

[[example]]
name = "telemetry"
required-features = ["telemetry"]

[[example]]
name = "copycat"
required-features = ["geo_routing"]

[dependencies]
crossbeam-channel = "0.5"
enum_dispatch = "0.3"
integer-sqrt = "0.1"
log = "0.4"
map_3d = "0.1"
rust-ini = "0.21"
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0"
threadpool = "1.8"

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.geo]
version = "0.29"
optional = true

[dependencies.opentelemetry]
version = "0.26"
optional = true

[dependencies.opentelemetry-http]
version = "0.26"
features = ["reqwest"]
optional = true

[dependencies.opentelemetry-otlp]
version = "0.26"
features = ["trace", "http-proto"]
optional = true

[dependencies.opentelemetry_sdk]
version = "0.26"
features = ["trace", "rt-tokio"]
optional = true

[dependencies.rumqttc]
version = "0.24"
features = ["websocket"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_with]
version = "3.4"
features = ["json"]

[dependencies.tokio]
version = "1.23"
features = ["full", "macros"]

[dev-dependencies]
clap = "4.4"
chrono = "0.4"
criterion = "0.5"
lazy_static = "1.4"
timer = "0.2"

[dev-dependencies.flexi_logger]
version = "0.29"
features = ["async", "compress"]

[[bench]]
name = "position"
harness = false
required-features = ["mobility"]
