# Software Name : libits-client
# SPDX-FileCopyrightText: Copyright (c) Orange SA
# SPDX-License-Identifier: MIT
#
# This software is distributed under the MIT license,
# see the "LICENSE.txt" file for more details or https://opensource.org/license/MIT/
#
# Authors: see CONTRIBUTORS.md

[package]
name = "libits-client"
version = "3.1.0"
authors = ["Frédéric Gardes <frederic.gardes@orange.com>", "Nicolas Buffon <nicolas.buffon@orange.com>"]
license = "MIT"
description = "library to connect on an ITS MQTT server"
homepage = "https://github.com/Orange-OpenSource/its-client"
documentation = "https://docs.rs/libits-client"
repository = "https://github.com/Orange-OpenSource/its-client.git"
readme = "README.md"
keywords = ["network", "its", "vehicle", "mqtt", "etsi"]
edition = "2024"

[lib]
name = "libits"
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["lib"]

[features]
mobility = ["geo"]
geo_routing = ["mobility"]
telemetry = ["base64", "opentelemetry", "opentelemetry-http", "opentelemetry-otlp", "opentelemetry_sdk"]

[[example]]
name = "json_counter"

[[example]]
name = "telemetry"
required-features = ["telemetry"]

[[example]]
name = "copycat"
required-features = ["geo_routing"]

[[example]]
name = "collector"

[[example]]
name = "display"

[dependencies]
crossbeam-channel = "0.5.15"
enum_dispatch = "0.3.13"
integer-sqrt = "0.1.5"
log = "0.4.29"
map_3d = "0.1.5"
rust-ini = "0.21.3"
serde_json = "1.0.149"
serde_repr = "0.1.20"
thiserror = "2.0.18"
threadpool = "1.8.1"
flexi_logger = "0.31.8"
rand = "0.9.2"
tempfile = "3.25.0"
axum = "0.8.8"
anyhow = "1.0.102"
tracing-subscriber = "0.3.22"
flate2 = "1.1.9"

[dependencies.tower-http]
version = "0.6.8"
features = ["fs", "cors"]

[dependencies.rusqlite]
version = "0.38.0"
features = ["bundled"]

[dependencies.base64]
version = "0.22.1"
optional = true

[dependencies.geo]
version = "0.29.3"
optional = true

[dependencies.opentelemetry]
version = "0.26.0"
optional = true

[dependencies.opentelemetry-http]
version = "0.26.0"
features = ["reqwest"]
optional = true

[dependencies.opentelemetry-otlp]
version = "0.26.0"
features = ["trace", "http-proto"]
optional = true

[dependencies.opentelemetry_sdk]
version = "0.26.0"
features = ["trace", "rt-tokio"]
optional = true

[dependencies.rumqttc]
version = "0.24.0"
features = ["websocket"]

[dependencies.reqwest]
version = "0.12.28"
features = ["json"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_with]
version = "3.16.1"
features = ["json"]

[dependencies.tokio]
version = "1.49.0"
features = ["full", "macros"]

[dev-dependencies]
clap = "4.5.60"
chrono = "0.4.43"
criterion = "0.8.2"
lazy_static = "1.5.0"
timer = "0.2.0"
flate2 = "1.1.9"
tar = "0.4.44"

[dev-dependencies.flexi_logger]
version = "0.31.8"
features = ["async", "compress"]

[[bench]]
name = "position"
harness = false
required-features = ["mobility"]

[profile.dev]
incremental = true
