[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "its-interqueuemanager"
version = "0.0.1"
authors = [
  { name="Yann E. MORIN", email="yann.morin@orange.com" },
]
description = "ITS inter-queue manage"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
]
license = "MIT"
dependencies = [
    "iot3 @ git+https://github.com/Orange-OpenSource/its-client@2c927bdc6fb9c6954d8f9265e4d1f046ecaf5a5f#subdirectory=python/iot3",
    "requests==2.32.4",
]

[project.urls]
"Homepage" = "https://github.com/Orange-OpenSource/its-client"
"Bug Tracker" = "https://github.com/Orange-OpenSource/its-client/issues"

[project.scripts]
its-iqm = "its_iqm.main:main"
