[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "its-vehicle"
version = "0.0.1"
authors = [
  { name="Yann E. MORIN", email="yann.morin@orange.com" },
]
description = "ITS vehicle"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
]
license = "MIT"
dependencies = [
    "iot3 @ git+https://github.com/Orange-OpenSource/its-client@2c927bdc6fb9c6954d8f9265e4d1f046ecaf5a5f#subdirectory=python/iot3",
    "its-quadkeys @ git+https://github.com/Orange-OpenSource/its-client@91b6508d743fa6b771f5a5480591ce554d52084c#subdirectory=python/its-quadkeys",
    "linuxfd==1.5",
]

[project.urls]
"Homepage" = "https://github.com/Orange-OpenSource/its-client"
"Bug Tracker" = "https://github.com/Orange-OpenSource/its-client/issues"

[project.scripts]
its-vehicle = "its_vehicle.main:main"
