[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "its-vehicle"
version = "0.0.1"
authors = [
  { name="Yann E. MORIN", email="yann.morin@orange.com" },
]
description = "ITS vehicle"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
]
license = "MIT"
dependencies = [
    "iot3 @ git+https://github.com/Orange-OpenSource/its-client@594663bd225e552e55a201b650188740c0fae235#subdirectory=python/iot3",
    "its-quadkeys @ git+https://github.com/Orange-OpenSource/its-client@fb9261360ee76dbabff8b3e6465c2941aec0ee70#subdirectory=python/its-quadkeys",
    "linuxfd==1.5",
]

[project.urls]
"Homepage" = "https://github.com/Orange-OpenSource/its-client"
"Bug Tracker" = "https://github.com/Orange-OpenSource/its-client/issues"

[project.scripts]
its-vehicle = "its_vehicle.main:main"
