# Software Name: its-client
# SPDX-FileCopyrightText: Copyright (c) 2016-2022 Orange
# SPDX-License-Identifier: MIT License
#
# This software is distributed under the MIT license, see LICENSE.txt file for more details.
#
# Author: Frédéric GARDES <frederic.gardes@orange.com> et al.
# Software description: This Intelligent Transportation Systems (ITS) [MQTT](https://mqtt.org/) client based on the [JSon](https://www.json.org) [ETSI](https://www.etsi.org/committee/its) specification transcription provides a ready to connect project for the mobility (connected and autonomous vehicles, road side units, vulnerable road users,...).

[package]
name = "its-client"
version = "0.3.1"
authors = ["Frédéric Gardes <frederic.gardes@orange.com>", "Nicolas Buffon <nicolas.buffon@orange.com>"]
license = "MIT"
description = "binary to connect on an ITS MQTT server"
homepage = "https://github.com/Orange-OpenSource/its-client"
documentation = "https://docs.rs/its-client"
repository = "https://github.com/Orange-OpenSource/its-client.git"
readme = "README.md"
keywords = ["network", "its", "vehicle", "mqtt", "etsi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["copycat"]
copycat = ["libits-copycat"]

[dependencies]
log = "0.4"
rumqttc = "0.10"
clap = "2.33.0"

[dependencies.flexi_logger]
version = "0.18.0"
features = ["async", "compress"]

[dependencies.pretty_env_logger]
version = "0.4"

[dependencies.tokio]
version = "1.8.1"
features = ["full", "macros"]

[dependencies.libits-client]
version = "0.3"
path="../libits-client"

[dependencies.libits-copycat]
version = "0.3"
path="../libits-copycat"
optional = true
