# Software Name: its-client
# SPDX-FileCopyrightText: Copyright (c) 2016-2022 Orange
# SPDX-License-Identifier: MIT License
#
# This software is distributed under the MIT license, see LICENSE.txt file for more details.
#
# Author: Frédéric GARDES <frederic.gardes@orange.com> et al.
# Software description: This Intelligent Transportation Systems (ITS) [MQTT](https://mqtt.org/) client based on the [JSon](https://www.json.org) [ETSI](https://www.etsi.org/committee/its) specification transcription provides a ready to connect project for the mobility (connected and autonomous vehicles, road side units, vulnerable road users,...).

[package]
name = "libits-client"
version = "1.3.0"
authors = ["Frédéric Gardes <frederic.gardes@orange.com>", "Nicolas Buffon <nicolas.buffon@orange.com>"]
license = "MIT"
description = "library to connect on an ITS MQTT server"
homepage = "https://github.com/Orange-OpenSource/its-client"
documentation = "https://docs.rs/libits-client"
repository = "https://github.com/Orange-OpenSource/its-client.git"
readme = "README.md"
keywords = ["network", "its", "vehicle", "mqtt", "etsi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde_json = "1.0"
serde_repr = "0.1"
rumqttc = "0.10"
pin-utils = "0.1"
navigation = "0.1"
cheap-ruler = "0.3.0"
rustls = "0.19"
integer-sqrt = "0.1.5"
geo = "0.23"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_with]
version = "1.9"
features = ["json"]

[dependencies.tokio]
version = "1.8"
features = ["full", "macros"]

[dependencies.async-channel]
version = "1.5"
