# Software Name: its-client
# SPDX-FileCopyrightText: Copyright (c) 2016-2022 Orange
# SPDX-License-Identifier: MIT License
#
# This software is distributed under the MIT license, see LICENSE.txt file for more details.
#
# Author: Frédéric GARDES <frederic.gardes@orange.com> et al.
# Software description: This Intelligent Transportation Systems (ITS) [MQTT](https://mqtt.org/) client based on the [JSon](https://www.json.org) [ETSI](https://www.etsi.org/committee/its) specification transcription provides a ready to connect project for the mobility (connected and autonomous vehicles, road side units, vulnerable road users,...).

[package]
name = "libits-copycat"
version = "0.3.1"
authors = ["Frédéric Gardes <frederic.gardes@orange.com>", "Nicolas Buffon <nicolas.buffon@orange.com>"]
license = "MIT"
description = "library to provide an example of analyser which copycat 10 seconds later the message received appropriating it"
homepage = "https://github.com/Orange-OpenSource/its-client"
documentation = "https://docs.rs/libits-copycat"
repository = "https://github.com/Orange-OpenSource/its-client.git"
readme = "README.md"
keywords = ["network", "its", "vehicle", "mqtt", "etsi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
timer = "0.2"
chrono = "0.4"

[dependencies.libits-client]
version = "0.3"
path="../libits-client"
